# frontend-apps

./: README.md
did-frontend-demo/: package-lock.json  package.json
did-frontend-demo/src/: App.js  Did.js  Getter.js  PhysContract.js  Tester.js  Verifier.js
did-frontend-demo/src/config/: common.json
ricardian-contract-editor/: Cargo.toml  README.md  package.json  rollup.config.js
ricardian-contract-editor/server/: file_server.py
ricardian-contract-editor/src/: main.rs
ricardian-contract-editor/src/components/: contract.rs  file_writer.rs  lib.rs  markdown.rs
ricardian-contract-editor/static/: index.html  style.css
