[package]
name = "frontend-rs"
version = "0.1.0"
authors = ["hskang9 <hskang9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.11.0"
stdweb = "0.4.20"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde_derive = "1.0.104"
serde = "1.0.104"
pulldown-cmark = "0.1.2"
sha3 = "0.8.2"
rust-crypto-wasm = "0.3.1"
hex = "0.4.0"
anyhow = "1.0.26"
serde_json = "1.0.45"

[[bin]]
name = "frontend_rs"
path = "src/main.rs"

[lib]
name = "frontend_rs"
path = "src/components/lib.rs"
